# dorutx

./: Cargo.toml  README.md
doziestar/: package.json
src/: main.rs
src/controllers/: mod.rs  rss.rs
src/routes/: home.rs  mod.rs
src/services/: rss.rs
src/tests/: health_check.rs  rss.rs
src/utilities/: mod.rs  server_setup.rs
static/css/: style.css
static/js/: script.js
templates/: articles.html  main.html
templates/base/: base.html  footer.html
