workspace = { members = ["ent"] }
[package]
name = "doziestar"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.7.4"
hyper = {  version = "1.1.0", features = ["full"] }
tokio = { version = "1.35.1", features = ["full"] }
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio", "macros" ] }
serde = "1.0.196"
